--- a/includes/assets/css/web/styleBugs.css
+++ b/includes/assets/css/web/styleBugs.css
@@ -95,6 +95,7 @@
 
 .zone_parcourir_image
 {
+    display: block;
     width: 120px;
     height: 120px;
     line-height: 120px;
@@ -133,6 +134,7 @@
     margin-left: auto;
     margin-right: auto;
     margin-top: -123px;
+    text-align: center;
 }
 
 .image
